# projeto-final

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  requirements.txt  vercel.json
Twitter/: admin.py  forms.py  models.py  urls.py  views.py
Twitter/migrations/: 0001_initial.py
Twitter/templates/registration/: login.html  password_change.html
Twitter/templates/twitter/: base.html  search.html
comments/: apps.py  factories.py  models.py  permissions.py  tests.py  urls.py
comments/serializers/: __init__.py  comment_serializer.py  comment_user_serializer.py
comments/views/: __init__.py  comment_detail_view.py  comment_list_create_view.py
core/: settings.py  urls.py
feed/: apps.py  urls.py  views.py
follows/: factories.py  models.py  serializers.py  tests.py  urls.py
follows/views/: __init__.py  followers_list_view.py  following_list_view.py
likes/: apps.py  factories.py  models.py  serializers.py  tests.py  urls.py
likes/views/: __init__.py  like_toggle_view.py  post_likes_list_view.py
notifications/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
post/: serializers.py
posts/: factories.py  models.py  serializers.py  urls.py
posts/tests/: __init__.py  comment_API_test_case.py  post_API_test_case.py
posts/views/: __init__.py  post_view_set.py  user_posts_view.py
user/: factories.py  models.py  urls.py
user/serializers/: change_password_serializer.py  user_serializer.py  user_update_serializer.py
user/views/: me_views.py  popular_user_viewset.py  user_register_viewset.py  user_viewset.py
users/: factories.py  models.py  urls.py
users/serializers/: change_password_serializer.py  public_serializer.py  register_serializer.py  user_serializer.py  user_update_serializer.py
users/views/: __init__.py  me_views.py  popular_user_viewset.py  user_register_viewset.py  user_viewset.py
‎.github/workflows/: build.yml
